--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel-notification-channels/jet-sms",
-    "description": "Sends SMS using JetSms API",
-    "homepage": "https://github.com/laravel-notification-channels/jet-sms",
+    "name": "ol-zamovshafu/devinotelecom-laravel",
+    "description": "Sends SMS using Devinotelecom API",
+    "homepage": "https://github.com/ol-zamovshafu/devinotelecom-laravel",
     "license": "MIT",
     "authors": [
         {
@@ -9,14 +9,18 @@
             "email": "erdemkeren@gmail.com",
             "homepage": "http://www.erdemkeren.com",
             "role": "Developer"
+        },
+        {
+            "name": "Oleg Lobanov",
+            "email": "oleg.lobanov@zamovshafu.com.ua"
         }
     ],
     "require": {
         "php": ">=5.6.4",
-        "erdemkeren/jet-sms-php": "^1.0",
-        "illuminate/notifications": "^5.3",
-        "illuminate/queue": "^5.1|^5.2|^5.3",
-        "illuminate/support": "^5.1|^5.2|^5.3"
+        "ol-zamovshafu/devinotelecom-php": "^1.3",
+        "illuminate/notifications": "^5.7",
+        "illuminate/queue": "^5.7",
+        "illuminate/support": "^5.7"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
@@ -24,12 +28,12 @@
     },
     "autoload": {
         "psr-4": {
-            "NotificationChannels\\JetSms\\": "src"
+            "NotificationChannels\\Devinotelecom\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "NotificationChannels\\JetSms\\Test\\": "tests"
+            "NotificationChannels\\Devinotelecom\\Test\\": "tests"
         }
     },
     "scripts": {
